<resources>


    <string name="app_name">AndroidApp</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="sign_up">Sign Up</string>
    <string name="retailer_heading">Join\nTo Game</string>
    <string name="retailer_tag_line">Start your journey in this game now!</string>
    <string name="create_account">Create Account</string>
    <string name="create_account_second">Create\nAccount</string>
    <string name="how_we_play">How to play</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forgot Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_password_second">Confirm Password</string>
    <string name="next_btn">Next</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enter_email">Enter Email</string>





    <string name="nav_home">Home</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_help">Help me</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="news_fragment">News Fragment</string>
    <string name="help_fragment">Help Fragment</string>
    <string name="chat_fragment">Chat Fragment</string>
    <string name="nav_news">News</string>
    <string name="communicate_with_us">Communicate with Us</string>
    <string name="places">Places</string>
    <string name="learn">Learn</string>
    <string name="settings">Settings</string>
    <string name="share_app">Share App</string>
    <string name="contact_us">Contact us</string>
    <string name="topics">Topics</string>

    <string name="oven">Oven</string>
    <string name="bed">Bed</string>
    <string name="expand_hut">Expand Hut</string>

    <!-- Right NavBar names  -->
    <string name="garden">Garden</string>
    <string name="forest">Forest</string>
    <string name="river">River</string>
    <string name="arena">Arena</string>
    <string name="sea">Sea</string>
    <string name="town">Town</string>
    <string name="hause">Hause</string>
    <string name="dump">Dump</string>
    <string name="hut">Hut</string>
    <string name="character">Character</string>
    <string name="equipment">Equipment</string>
    <string name="bag">Bag</string>
    <string name="pet">Pet</string>
    <string name="tasks">Tasks</string>
    <string name="quests">Quests</string>
    <string name="achievements">Achievements</string>

    <string name="communications">Communications</string>
    <string name="party">Party</string>
    <string name="guilds">Guilds</string>
    <string name="highscores">Highscores</string>
    <string name="awards">Awards</string>
    <string name="forum">Forum</string>

    <string name="more">More</string>
    <string name="store">Store</string>
    <string name="support">Support</string>
    <string name="log_out">Log out</string>






    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="navigation_tutorial">Solution Ptototype</string>
    <string name="nav_camera">Capture</string>
    <string name="camera_fragment">Camera Fragment</string>
    <string name="nav_notify">Notifications</string>
    <string name="topics_fragment">Topics Fragment</string>
    <string name="notification_fragment">Notification Fragment</string>
    <string name="learn_fragment">Learn Fragment</string>
    <string name="contact_fragment">Contact Fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>