<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_compass"

        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_news"
        android:icon="@android:drawable/ic_menu_compass"

        android:title="@string/nav_news" />
    <item
        android:id="@+id/nav_camera"
        android:icon="@android:drawable/ic_menu_compass"

        android:title="@string/nav_camera" />
    <item
        android:id="@+id/nav_chat"
        android:icon="@android:drawable/ic_menu_compass"

        android:title="@string/nav_chat" />
    <item
        android:id="@+id/nav_notify"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/nav_notify" />
</menu>