<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".common.LoginSignup.Login"
    android:background="@color/light_Green"
    android:padding="30dp"
    android:transitionName="transition_login">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <ImageView
        android:id="@+id/login_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
      android:src="@drawable/gerenal_back_icon"/>

    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/muli_black"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textAllCaps="true" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp">

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:hint="@string/enter_email"
          app:hintTextColor="@color/black"
          app:boxStrokeColor="@color/black"
          app:boxStrokeWidthFocused="2dp"
          app:startIconDrawable="@drawable/filed_username_icon"
          app:startIconTint="@color/black"
          app:endIconMode="clear_text"
          app:endIconTint="@color/black"
          >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/muli"
            android:textColor="@color/black"
            android:inputType="text"/>
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:hint="@string/enter_password"
          app:hintTextColor="@color/black"
          app:boxStrokeColor="@color/black"
          app:boxStrokeWidthFocused="2dp"
          app:startIconDrawable="@drawable/field_password_icon"
          app:startIconTint="@color/black"
          app:endIconMode="password_toggle"
          app:endIconTint="@color/black"
          >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/muli"
            android:textColor="@color/black"
            android:inputType="textPassword"
            />
      </com.google.android.material.textfield.TextInputLayout>

      <RelativeLayout
          android:id="@+id/forget_password_block"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/login_password"
          android:layout_marginTop="15dp">

        <ProgressBar
            android:id="@+id/progress_bar_login"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:background="@drawable/white_circle"/>
        <Button
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:background="#00000000"
            android:text="@string/forget_password"
            android:textColor="@color/black"
            android:textStyle="bold" />


      </RelativeLayout>

      <Button
          android:id="@+id/letTheUserLogIn"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
        android:text="@string/login"
          android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"/>

      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="#00000000"
          android:text="@string/create_account"
          android:layout_marginTop="20dp"
          android:layout_gravity="center"
          android:onClick="callSignUpFromLogin"
          android:textColor="@color/black"
          android:textStyle="bold"/>
    </LinearLayout>
    </RelativeLayout>
  </LinearLayout>

  </ScrollView>